objects/vlocity_ins__InboundRESTInterface__c.object
<CustomObject>
    <fields>
        <fullName>vlocity_ins__AttributesEncodingStyle__c</fullName>
        <label>Attributes Encoding Style</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Flat</fullName>
                </value>
                <value>
                    <fullName>Structure</fullName>
                    <default>true</default>
                    <label>Structure</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__GlobalKey__c</fullName>
        <description>The globally unique identifier of the Product. Used to identify the product across Salesforce instances.</description>
        <label>Global Key</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__RESTEndpoint__c</fullName>
        <label>REST Endpoint</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__RequiresAuthorization__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Requires Authorization</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ResponseAttrsVlocityDataRaptorBundle__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Response Attrs Vlocity DataRaptor Bundle</label>
        <referenceTo>vlocity_ins__DRBundle__c</referenceTo>
        <relationshipLabel>Inbound REST Interfaces</relationshipLabel>
        <relationshipName>InboundRESTInterfacesResponseAttrs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ResponseItemsVlocityDataRaptorBundle__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Response Items Vlocity DataRaptor Bundle</label>
        <referenceTo>vlocity_ins__DRBundle__c</referenceTo>
        <relationshipLabel>Inbound REST Interfaces</relationshipLabel>
        <relationshipName>InboundRESTInterfacesResponseItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ResponseVlocityDataRaptorBundle__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Response Vlocity DataRaptor Bundle</label>
        <referenceTo>vlocity_ins__DRBundle__c</referenceTo>
        <relationshipLabel>Inbound REST Interfaces</relationshipLabel>
        <relationshipName>InboundRESTInterfacesResponse</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Inbound REST Interface</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Inbound REST Interfaces</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>